cmake_minimum_required(VERSION 3.13)
project(SIMP)

set(CMAKE_CXX_STANDARD 14)

add_executable(SIMP
        .idea/encodings.xml
        .idea/misc.xml
        .idea/modules.xml
        .idea/SIMP.iml
        .idea/vcs.xml
        .idea/workspace.xml
        .gitignore
        LICENSE
        README.md)
